airflow/logs/dag_id=Integrate_Time_Location_Dimension/run_id=manual__2024-08-07T093908.458392+0000/task_id=bronze_location/attempt=1.log
[2024-08-07T09:39:39.770+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-08-07T09:39:39.806+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Integrate_Time_Location_Dimension.bronze_location manual__2024-08-07T09:39:08.458392+00:00 [queued]>
[2024-08-07T09:39:39.823+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Integrate_Time_Location_Dimension.bronze_location manual__2024-08-07T09:39:08.458392+00:00 [queued]>
[2024-08-07T09:39:39.823+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2024-08-07T09:39:39.861+0000] {taskinstance.py:2330} INFO - Executing <Task(SQLExecuteQueryOperator): bronze_location> on 2024-08-07 09:39:08.458392+00:00
[2024-08-07T09:39:39.867+0000] {standard_task_runner.py:63} INFO - Started process 5826 to run task
[2024-08-07T09:39:39.870+0000] {standard_task_runner.py:90} INFO - Running: ['airflow', 'tasks', 'run', 'Integrate_Time_Location_Dimension', 'bronze_location', 'manual__2024-08-07T09:39:08.458392+00:00', '--job-id', '236', '--raw', '--subdir', 'DAGS_FOLDER/etl_time_location.dag.py', '--cfg-path', '/tmp/tmpk5hx_0_4']
[2024-08-07T09:39:39.873+0000] {standard_task_runner.py:91} INFO - Job 236: Subtask bronze_location
[2024-08-07T09:39:39.973+0000] {task_command.py:426} INFO - Running <TaskInstance: Integrate_Time_Location_Dimension.bronze_location manual__2024-08-07T09:39:08.458392+00:00 [running]> on host 45f7764b2bf2
[2024-08-07T09:39:40.135+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='Integrate_Time_Location_Dimension' AIRFLOW_CTX_TASK_ID='bronze_location' AIRFLOW_CTX_EXECUTION_DATE='2024-08-07T09:39:08.458392+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-08-07T09:39:08.458392+00:00'
[2024-08-07T09:39:40.135+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-08-07T09:39:40.149+0000] {sql.py:276} INFO - Executing: BEGIN TRANSACTION
	INSERT INTO "stgDimLocation"(LocationKey, region_code, region_name,
								province_code, province_name,
								district_code, district_name,
								ward_code, ward_name)
	SELECT
		*
	FROM dblink('host=host.docker.internal dbname=hongheovna password=nhanbui user=postgres port=5434', 
				'select * from public.vw_stgdimlocation')
	AS (
		LocationKey BIGINT,
		region_code CHAR(5),
		region_name VARCHAR(50),
		province_code CHAR(5),
		province_name VARCHAR(50),
		district_code CHAR(5),
		district_name VARCHAR(50),
		ward_code CHAR(5),
		ward_name VARCHAR(50)
	);
COMMIT;
[2024-08-07T09:39:40.163+0000] {base.py:84} INFO - Using connection ID 'postgres_ldtbxh_stage' for task execution.
[2024-08-07T09:39:40.258+0000] {base.py:84} INFO - Using connection ID 'postgres_ldtbxh_stage' for task execution.
[2024-08-07T09:39:40.281+0000] {sql.py:470} INFO - Running statement: BEGIN TRANSACTION
	INSERT INTO "stgDimLocation"(LocationKey, region_code, region_name,
								province_code, province_name,
								district_code, district_name,
								ward_code, ward_name)
	SELECT
		*
	FROM dblink('host=host.docker.internal dbname=hongheovna password=*** user=postgres port=5434', 
				'select * from public.vw_stgdimlocation')
	AS (
		LocationKey BIGINT,
		region_code CHAR(5),
		region_name VARCHAR(50),
		province_code CHAR(5),
		province_name VARCHAR(50),
		district_code CHAR(5),
		district_name VARCHAR(50),
		ward_code CHAR(5),
		ward_name VARCHAR(50)
	);
COMMIT;, parameters: None
[2024-08-07T09:39:40.286+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-08-07T09:39:40.289+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 418, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 475, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "INSERT"
LINE 2:  INSERT INTO "stgDimLocation"(LocationKey, region_code, regi...
         ^

[2024-08-07T09:39:40.308+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=Integrate_Time_Location_Dimension, task_id=bronze_location, run_id=manual__2024-08-07T09:39:08.458392+00:00, execution_date=20240807T093908, start_date=20240807T093939, end_date=20240807T093940
[2024-08-07T09:39:40.345+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 236 for task bronze_location (syntax error at or near "INSERT"
LINE 2:  INSERT INTO "stgDimLocation"(LocationKey, region_code, regi...
         ^
; 5826)
[2024-08-07T09:39:40.365+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-08-07T09:39:40.400+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-08-07T09:39:40.424+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
